@startuml genPDFService_Facade_Pattern

title Patrón Facade - genPDFService

' Estilo
skinparam classAttributeIconSize 0
skinparam backgroundColor #FEFEFE
skinparam shadowing false

' Cliente
package "Cliente" #LightYellow {
    class Controller {
        +void generarComprobante()
    }
}

' FACADE
package "<<Facade>>" #LightBlue {
    class genPDFService {
        - lectorServicio: ManejadorService
        - emp: Empresa
        + generarPDF(comp: Comprobante): void
    }
}

note right of genPDFService
  **PATRÓN FACADE**
  Proporciona una interfaz simplificada
  para la generación de PDFs, ocultando
  la complejidad de los subsistemas:
  - ClienteService
  - DAODetalleComprobanteImpl
  - GeneradorPDFDirector
  - GeneradorPDFBuilder (Facturas/Boletas)
  - ManejadorService
end note

' Subsistemas
package "Subsistemas" #LightGreen {
    
    ' Subsistema de Servicios
    package "Services" {
        class ManejadorService {
            - manejadorEmpresa: ManejadorJsonI<Empresa>
            - manejadorUsuario: ManejadorJsonI<Usuario>
            + leerEmpresa(): Empresa
            + leerUsuario(): Usuario
            + guardarEmpresa(empresa: Empresa): void
            + guardarUsuario(usuario: Usuario): void
        }
        
        class ClienteService {
            - repository: DAOCliente
            + obtenerTodos(): List<Cliente>
            + obtenerPorId(id: Long): Cliente
            + insertarCliente(cliente: Cliente): void
            + actualizarCliente(cliente: Cliente): void
        }
    }
    
    ' Subsistema de Persistencia
    package "Persistence" {
        class DAODetalleComprobanteImpl {
            + listarDetallesPorComprobante(idComprobante: Long): List<DetalleComprobante>
        }
    }
    
    ' Subsistema Builder (Patrón Builder)
    package "Builder Pattern" {
        class GeneradorPDFDirector {
            - builder: GeneradorPDFBuilder
            + setBuilder(builder: GeneradorPDFBuilder): void
            + generarComprobantePDF(...): void
        }
        
        interface GeneradorPDFBuilder <<interface>> {
            + iniciarDocumento(ruta: String): void
            + agregarEncabezado(empresa: Empresa): void
            + agregarDatosCliente(cliente: Cliente, comp: Comprobante): void
            + agregarCuerpo(comp: Comprobante, detalles: List<DetalleComprobante>): void
            + agregarPie(comp: Comprobante): void
            + finalizarDocumento(): void
        }
        
        class GeneradorFacturaPDF {
            + iniciarDocumento(ruta: String): void
            + agregarEncabezado(empresa: Empresa): void
            + agregarDatosCliente(...): void
            + agregarCuerpo(...): void
            + agregarPie(comp: Comprobante): void
            + finalizarDocumento(): void
        }
        
        class GeneradorBoletaPDF {
            + iniciarDocumento(ruta: String): void
            + agregarEncabezado(empresa: Empresa): void
            + agregarDatosCliente(...): void
            + agregarCuerpo(...): void
            + agregarPie(comp: Comprobante): void
            + finalizarDocumento(): void
        }
        
        GeneradorPDFDirector --> GeneradorPDFBuilder
        GeneradorFacturaPDF ..|> GeneradorPDFBuilder
        GeneradorBoletaPDF ..|> GeneradorPDFBuilder
    }
}

' Modelos
package "Model" #LightCoral {
    class Comprobante {
        - idComprobante: Long
        - idTipoComprobante: int
        - idCliente: Long
    }
    
    class Cliente {
        - idCliente: Long
        - nombres: String
        - apellidos: String
    }
    
    class Empresa {
        - ruc: String
        - razonSocial: String
        - direccion: String
    }
    
    class DetalleComprobante {
        - idDetalle: Long
        - producto: String
        - cantidad: int
        - precio: double
    }
}

' Relaciones del Cliente con el Facade
Controller --> genPDFService : usa

' Relaciones del Facade con los Subsistemas
genPDFService --> ManejadorService : delega
genPDFService --> ClienteService : delega
genPDFService --> DAODetalleComprobanteImpl : delega
genPDFService --> GeneradorPDFDirector : delega
genPDFService ..> GeneradorFacturaPDF : crea
genPDFService ..> GeneradorBoletaPDF : crea

' Relaciones con Modelos
genPDFService --> Comprobante : recibe
genPDFService ..> Empresa : usa
ClienteService --> Cliente : retorna
DAODetalleComprobanteImpl --> DetalleComprobante : retorna
ManejadorService --> Empresa : retorna

' Nota adicional
note bottom of Controller
  El cliente solo necesita llamar a
  genPDFService.generarPDF(comp)
  sin conocer los detalles internos
  de la generación del PDF
end note

@enduml
